--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
+    "apollo-server-express": "^2.25.2",
     "express": "^4.17.1",
+    "graphql": "^0.13.2",
+    "mongodb": "^3.7.3",
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
