--- a/ui/package.json
+++ b/ui/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "tut_5_ui",
-  "version": "1.0.0",
-  "description": "tutorial 5 for IT5007, ui part",
-  "main": "index.js",
+  "name": "ui",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "nodemon -w uiserver.js uiserver.js",
-    "compile": "babel src --out-dir public",
-    "watch": "babel src --out-dir public --watch --verbose"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
-  "author": "e0674587",
-  "license": "ISC",
   "dependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "express": "^4.17.1",
-    "nodemon": "^1.19.4"
+    "react": "17.0.2",
+    "react-native": "0.66.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
