--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "apollo-client": "^2.6.10",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.5",
     "react": "17.0.2",
+    "react-apollo": "^3.1.5",
     "react-native": "0.66.2"
   },
   "devDependencies": {
